Update smartfactory-zull .properties

--- a/smartfactory-zull .properties
+++ b/smartfactory-zull .properties
@@ -21,3 +21,13 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+# ===============================
+#  gateway Config
+# ===============================
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=preprocessing
+spring.cloud.gateway.routes[0].uri=lb://smartfactory-preprocessing/preprocessing
+spring.cloud.gateway.routes[0].predicates[0]=Path=/preprocessing/**
+
