--- a/smartfactory-zull .properties
+++ b/smartfactory-zull .properties
@@ -31,3 +31,9 @@ spring.cloud.gateway.routes[0].id=preprocessing
 spring.cloud.gateway.routes[0].uri=lb://smartfactory-preprocessing/preprocessing
 spring.cloud.gateway.routes[0].predicates[0]=Path=/preprocessing/**
 
+pring.cloud.gateway.routes[0].id=api
+spring.cloud.gateway.routes[0].uri=lb://smartfactory-postprocessing/api
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/**
+
+
+
