--- a/smartfactory-zull .properties
+++ b/smartfactory-zull .properties
@@ -31,9 +31,16 @@ spring.cloud.gateway.routes[0].id=preprocessing
 spring.cloud.gateway.routes[0].uri=lb://smartfactory-preprocessing/preprocessing
 spring.cloud.gateway.routes[0].predicates[0]=Path=/preprocessing/**
 
-pring.cloud.gateway.routes[1].id=api
+spring.cloud.gateway.routes[1].id=api
 spring.cloud.gateway.routes[1].uri=lb://smartfactory-postprocessing/api
 spring.cloud.gateway.routes[1].predicates[1]=Path=/api/**
 
+spring.cloud.gateway.routes[1].id=api
+spring.cloud.gateway.routes[1].uri=lb://smartfactory-notification/api
+spring.cloud.gateway.routes[1].predicates[1]=Path=/api/**
+
+spring.cloud.gateway.routes[1].id=integration
+spring.cloud.gateway.routes[1].uri=lb://smartfactory-integration/integration
+spring.cloud.gateway.routes[1].predicates[1]=Path=/integration/**
 
 
