--- a/smartfactory-postprocessing-dev.properties
+++ b/smartfactory-postprocessing-dev.properties
@@ -99,4 +99,12 @@ intervention.url=localhost/smartfactory
 # ===============================
 # 8h->28800000 millisecond
 # 20 min->1200000 millisecond
+# ===============================
+# = Mongo Config
+# ===============================
+spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.data.mongodb.database=skg_postprocessing
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+# ===============================
 
