--- a/smartfactory-postprocessing-dev.properties
+++ b/smartfactory-postprocessing-dev.properties
@@ -102,9 +102,9 @@ intervention.url=localhost/smartfactory
 # ===============================
 # = Mongo Config
 # ===============================
-spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
-spring.data.mongodb.database=skg_postprocessing
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+#spring.data.mongodb.database=skg_postprocessing
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
 # ===============================
 
