--- a/smartfactory-postprocessing-dev.properties
+++ b/smartfactory-postprocessing-dev.properties
@@ -17,7 +17,8 @@ eureka.client.service-url.default-zone=http://localhost:9081/eureka
 # ===============================
 #  DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/skg?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Africa/Tunis&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/skg?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Africa/Tunis&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/skg?useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.sqlScriptEncoding=UTF-8
